--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -773,7 +773,7 @@ You can use {doc}`/reference/commands/index_column_diff` to detect index corrupt
   However, If this problem occur, Groonga returns match record.
   Because if we use `query_parallel_or()`, `match_escalation_threshold` doesn't work.
 
-- Fixed a bug that full-text search againt a reference column of a vector didn't work.
+- Fixed a bug that full-text search against a reference column of a vector didn't work.
 
   This problem has occured Groonga v14.0.0 or later.
   This problem has effect if we execute full-text search against a reference column of a vector.
