--- a/doc/source/news/2.rst
+++ b/doc/source/news/2.rst
@@ -84,7 +84,7 @@ Release 2.1.0 - 2012-12-29
    database at least once, you can not open its database by old
    version of groonga.
 
-   There is also another backward incompatible change agaist plugin API for
+   There is also another backward incompatible change against plugin API for
    tokenizer. The argument of ``grn_tokenizer_query_open`` API has changed.
    This API change affects developer of tokenizer plugin.
 
@@ -137,7 +137,7 @@ Release 2.0.9 - 2012-11-29
 Improvements
 ^^^^^^^^^^^^
 
-* Supported to calculate the value of distance accross border
+* Supported to calculate the value of distance across border
   in ``geo_distance`` with ``rectangle`` as approximate type. [#1534]
 * [doc] Added the :doc:`/spec/gqtp` specification.
 * Improved to ignore non critical ``getaddrinfo()`` error which groonga command emits on startup.
@@ -146,7 +146,7 @@ Improvements
 * [experimental] Added ``snippet_html()`` function which extract keyword and surrounding text.
   See :doc:`/reference/functions/snippet_html` about details.
 * Supported to report error reason when error occured during reading table record.
-* Supported to search with keyword by nested index notation ( concatinate multiple 
+* Supported to search with keyword by nested index notation ( concatenate multiple
   indexed column name with dot character ) if there is a relationship between
   multiple table with index.
 * Supported to log "[tokenizer][mecab]" tag when using ``TokenMecab`` tokenizer.
