--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -1369,7 +1369,7 @@ But It keeps backward compatibility. We can upgrade to 14.0.0 without rebuilding
 
   These functions calculate distance in the `output` stage.
 
-  However, we don't optimaize these functions yet.
+  However, we don't optimize these functions yet.
 
   - `distance_cosine()`: Calculate cosine similarity.
   - `distance_inner_product()`: Calculate inner product.
