--- a/doc/source/news/2.rst
+++ b/doc/source/news/2.rst
@@ -510,7 +510,7 @@ Fixes
 * [rpm] Removed needless change logs. [#1328] [Patch by IWAI, Masaharu]
 * [deb][rpm] Added missing curl dependency.
   [GitHub#12] [Patch by IWAI, Masaharu]
-* [rpm] Removed needleess ruby package dependency from groonga package.
+* [rpm] Removed needless ruby package dependency from groonga package.
   [#1330] [Suggested by IWAI, Masaharu]
 * [deb] Added missing default values to groonga-server's
   configuration file.
