--- a/doc/source/news/9.rst
+++ b/doc/source/news/9.rst
@@ -680,7 +680,7 @@ Improvements
 
 * [:doc:`/reference/commands/dump`] Added support for dumping binary data.
 
-* [:doc:`/reference/commands/select`] Added support for similer search against index column.
+* [:doc:`/reference/commands/select`] Added support for similar search against index column.
 
   * If you have used multi column index, you can similar search against all source columns by this feature.
 
