--- a/doc/locale/ja/LC_MESSAGES/news/7.po
+++ b/doc/locale/ja/LC_MESSAGES/news/7.po
@@ -310,7 +310,7 @@ msgstr "エラー時に空のファイルが残らないようにしました。
 msgid "In the previous versions, there is a case that empty file keeps remain on error."
 msgstr "以前のバージョンでは、空のファイルがエラー時に残っていました。"
 
-msgid "Here is the senario to reproduce:"
+msgid "Here is the scenario to reproduce:"
 msgstr "再現するためのシナリオは以下です。:"
 
 msgid "creating new file by grn_fileinfo_open succeeds"
