--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -201,7 +201,7 @@ It's useful when you use {ref}`query-log` too. In {ref}`query-log`, the context 
 
 [GH-2104](https://github.com/groonga/groonga/issues/2104)
 
-There was a case that wastes key space. Now, we can use key space as efficiency as possible.
+There was a case that wastes key space. Now, we can use key space as efficiently as possible.
 
 ### Fixes
 
