--- a/doc/source/news/5.rst
+++ b/doc/source/news/5.rst
@@ -1034,7 +1034,7 @@ Improvements
 
 * Supported MessagePack 1.0.1. [Reported by Hiroshi Hatake]
 * [logical_range_filter] Disabled range index by default. It's enabled
-  when you set the enviromnent variable ``GRN_LOGICAL_RANGE_FILTER_ENABLED``
+  when you set the environment variable ``GRN_LOGICAL_RANGE_FILTER_ENABLED``
   to ``yes``.
 
 Fixes
