--- a/doc/source/news/9.rst
+++ b/doc/source/news/9.rst
@@ -54,7 +54,7 @@ Improvements
 * [:doc:`/reference/commands/load`] Improve error message.
 
   * Response of ``load`` command includes error message also.
-  * If we faile data load, Groonga output error detail of ``load`` command by this Improvement.
+  * If we fail data load, Groonga output error detail of ``load`` command by this Improvement.
 
 * [httpd] Updated bundled nginx to 1.17.7.
 
@@ -250,7 +250,7 @@ Fixes
 
 * [geo_distance_location_rectangle] Fixed an example that has wrong ``load`` format. [GitHub#1023][Patched by yagisumi]
 
-* [:doc:`/tutorial/micro_blog`] Fixed an example that has wrong search results. [GutHub#1024][Patched by yagisumi]
+* [:doc:`/tutorial/micro_blog`] Fixed an example that has wrong search results. [GitHub#1024][Patched by yagisumi]
 
 Thanks
 ^^^^^^
@@ -615,7 +615,7 @@ Fixes
   * In such a case, an empty vector ``[]`` is returned instead of ``null``.
 
 * Fixed a warning about possibility of counting threads overflow.
-  In real world, it doesn't affect user because enourmous number of threads is not used. [GitHub#904]
+  In real world, it doesn't affect user because enormous number of threads is not used. [GitHub#904]
 
 * Fixed build error on macOS [GitHub#909] [Reported by shiro615]
 
