--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -1332,7 +1332,7 @@ You can use {doc}`/reference/commands/index_column_diff` to detect index corrupt
 - [{doc}`/install/ubuntu`] We become able to provide package for Ubuntu again.
 
   We don't provide packages for Ubuntu in Groonga version 14.0.0.
-  Because we fail makeing Groonga package for Ubuntu by problrm of build environment for Ubuntu package.
+  Because we fail making Groonga package for Ubuntu by problrm of build environment for Ubuntu package.
 
   We fixed problrm of build environment for Ubuntu package in 14.0.1. So, we can provide packages for Ubuntu again since this release.
 
